force-app/main/default/objects/Supplier_Part__c/Supplier_Part__c.object-meta.xml
<CustomObject>
    <label>サプライヤー品目</label>
    <pluralLabel>サプライヤー品目</pluralLabel>
    <nameField>
        <label>サプライヤー品目番号</label>
        <displayFormat>SP-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>