force-app/main/default/objects/Supplier_Part__c/fields/Default_Site__c.field-meta.xml
<CustomField>
    <fullName>Default_Site__c</fullName>
    <label>プライマリ製造拠点</label>
    <type>Lookup</type>
    <referenceTo>Manufacturing_Site__c</referenceTo>
    <relationshipName>Supplier_Parts</relationshipName>
    <relationshipLabel>サプライヤー品目</relationshipLabel>
</CustomField>