force-app/main/default/objects/Supplier_Part__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <label>品名</label>
    <type>Text</type>
    <length>255</length>
</CustomField>