force-app/main/default/objects/Supplier_Part__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>品番</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>