force-app/main/default/objects/Supplier_Part__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>サプライヤー</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Supplier_Parts</relationshipName>
    <relationshipLabel>サプライヤー品目</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>